<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    
    <string name="ueb01_max_input_lines">3</string>
    <string name="ueb01_backbt">Delete</string>
    <string name="ueb01_1">1</string>
    <string name="ueb01_2">2</string>
    <string name="ueb01_3">3</string>
    <string name="ueb01_4">4</string>
    <string name="ueb01_5">5</string>
    <string name="ueb01_6">6</string>
    <string name="ueb01_7">7</string>
    <string name="ueb01_8">8</string>
    <string name="ueb01_9">9</string>
    <string name="ueb01_0">0</string>
    <string name="ueb01_komma">.</string>
    <string name="ueb01_equals">=</string>
    <string name="ueb01_plus">+</string>
    <string name="ueb01_minus">-</string>
    <string name="ueb01_mul">x</string>
    <string name="ueb01_mul_calc">*</string>
    <string name="ueb01_divide">/</string>
    <string name="ueb01_lpar">(</string>
    <string name="ueb01_rpar">)</string>
    <string name="ueb01_mod">%</string>
    <string name="ueb01_pow">^</string>
    <string name="ueb01_sin">sin</string>
    <string name="ueb01_cos">cos</string>
    <string name="ueb01_tan">tan</string>
    <string name="ueb01_sqrt">sqrt</string>
    <string name="ueb01_wrongInput">Eingabe fehlerhaft!</string>
    <string name="ueb01_menu_item_more">Weitere Funktionen</string>
    <string name="ueb01_menu_item_sin_front">sin</string>
    <string name="ueb01_menu_item_cos_front">cos</string>
    <string name="ueb01_menu_item_tan_front">tan</string>
    <string name="ueb01_menu_item_sqrt_front">sqrt</string>
    <string name="ueb01_menu_item_sin_back">&#8230;sin</string>
    <string name="ueb01_menu_item_cos_back">&#8230;cos</string>
    <string name="ueb01_menu_item_tan_back">&#8230;tan</string>
    <string name="ueb01_menu_item_sqrt_back">&#8230;sqrt</string>
    <string name="ueb01_three_dots">&#8230;</string>
    
    <!-- layout -->
    <string name="normal_port">normal-port</string>
    <string name="normal_land">normal-land</string>
    <string name="xlarge_port">xlarge-port</string>
    <string name="xlarge_land">xlarge-land</string>
    
</resources>