<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_more"
        android:showAsAction="always"
        android:title="@string/ueb01_menu_item_more"
        android:icon="@drawable/function">

    	<menu>
		    <item
		        android:id="@+id/menu_item_sin_front"
		        android:title="@string/ueb01_menu_item_sin_front"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_cos_front"
		        android:title="@string/ueb01_menu_item_cos_front"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_tan_front"
		        android:title="@string/ueb01_menu_item_tan_front"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_sqrt_front"
		        android:title="@string/ueb01_menu_item_sqrt_front"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_sin_back"
		        android:title="@string/ueb01_menu_item_sin_back"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_cos_back"
		        android:title="@string/ueb01_menu_item_cos_back"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_tan_back"
		        android:title="@string/ueb01_menu_item_tan_back"
		        android:showAsAction="never" />
		    <item
		        android:id="@+id/menu_item_sqrt_back"
		        android:title="@string/ueb01_menu_item_sqrt_back"
		        android:showAsAction="never" />
		    </menu>
        </item>
</menu>
