<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ueb01_calcTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="right"
        android:padding="@dimen/ueb01_calcField"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:freezesText="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ueb01_back" >

        <ImageView
            android:id="@+id/ueb01_backBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/ueb01_backbt"
            android:src="@drawable/ueb01_backbt" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" >

            <TextView
                android:id="@+id/ueb01_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_7"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_8"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_9"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btClac"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_divide"
                android:textColor="@color/ueb02_btFontWhite"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" >

            <TextView
                android:id="@+id/ueb01_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_4"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_5"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_6"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_x"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btClac"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_x"
                android:textColor="@color/ueb02_btFontWhite"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" >

            <TextView
                android:id="@+id/ueb01_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_3"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btClac"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_minus"
                android:textColor="@color/ueb02_btFontWhite"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" >

            <TextView
                android:id="@+id/ueb01_komma"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_komma"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btNumber"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_0"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btEquals"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_equals"
                android:textColor="@color/ueb02_btFontWhite"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ueb01_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/ueb01_bt_margin"
                android:background="@color/ueb01_btClac"
                android:gravity="center"
                android:padding="@dimen/ueb01_padding_bt"
                android:text="@string/ueb01_plus"
                android:textColor="@color/ueb02_btFontWhite"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

</LinearLayout>